# Programming_languages_and_tools

./: README.md
lab1/: program2.cpp
lab2/example/: CMakeLists.txt
lab2/example/src/: main.cpp
lab2/project/: CMakeLists.txt
lab2/project/src/: sym.cpp
lab2/project/tests/: test_podzbior.cpp  test_roznica.cpp  test_sym.cpp  test_wspolna.cpp
lab4/: CMakeLists.txt
lab4/include/: commands.hpp  test_data
lab4/src/: grep.cpp  main.cpp  sort.cpp  tail.cpp
lab4/tests/: test_grep.cpp  test_sort.cpp  test_tail.cpp
lab5/: CMakeLists.txt
lab5/include/: functions.hpp
lab5/src/: encryptXOR.cpp  findMalwareSignature.cpp  main.cpp  strcpy.cpp  validationFunctions.cpp  vulnerability.cpp
lab5/tests/: test_findMalwareSignature.cpp
lab6/: CMakeLists.txt
lab6/include/: Car.hpp  MapDirection.hpp  MapVisualizer.hpp  MoveDirection.hpp  RectangularMap.hpp  Vector2d.hpp  objects.hpp
lab6/src/: Car.cpp  MapDirection.cpp  MapVisualizer.cpp  MoveDirection.cpp  RectangularMap.cpp  Vector2d.cpp  main.cpp
lab6/tests/: test_Car.cpp  test_MapDirection.cpp  test_RectangularMap.cpp  test_Vector2d.cpp
zaj1/: program  program.cpp  program2  zad3  zad3.cpp
zaj2/: zad1  zad1.cpp
zaj2/example/tests/: test_sum.cpp
zaj2/projekt/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main  test_operacji  test_operacji[1]_include.cmake  test_operacji[1]_tests.cmake
zaj2/projekt/Testing/Temporary/: CTestCostData.txt
zaj2/projekt/include/: operacje.hpp
zaj2/projekt/src/: main.cpp  podzbior.cpp  rowne.cpp  roznica.cpp  suma.cpp  wspolna.cpp
zaj2/projekt/tests/: test_rowne.cpp  test_suma.cpp
zaj3/: drzewo  drzewo.cpp  kolejka  kolejka.cpp  sort_wielofazowe.cpp  sortowanie  stos  stos.cpp  stos_zad  stos_zad.cpp
zaj4/: CMakeLists.txt
zaj4/src/: sort.cpp
zaj4/tests/: test_grep.cpp
